--- a/content/blog/2017-09-30-books-read-2017Q3.markdown
+++ b/content/blog/2017-09-30-books-read-2017Q3.markdown
@@ -16,6 +16,12 @@ url: /blog/2017/09/30/books-read-2017q3/
 [deaprendices]: https://twitter.com/@deaprendices
 [codurance]: https://twitter.com/@codurance
 
+Read this quarter:
+
+  * the senior software developer; Copeland, with the [aprendices reading club][deaprendices]
+  * Russell en 90 minutos, Strathern; non-technical. A quick introduction to Bertrand Russell, his life and his way of thinking and seeing the world.
+  * Homenaje a Cataluña, Orwell; non-technical. A first-person view of the events during the Spanish Civil War (1936-1939), seen from the perspective of a British citizen that went there voluntarily. Explains the internal fracture of the left political parties and the fracture of the Spanish society.
+
 <!-- copy-paste the books.md here -->
 
 backlog (partially sorted):
