--- a/content/blog/2017-06-30-books-read-2017Q2.markdown
+++ b/content/blog/2017-06-30-books-read-2017Q2.markdown
@@ -19,8 +19,8 @@ url: /blog/2017/06/30/books-read-2017q2/
 
 Finished:
 
-  * Homenaje a Catalunya, George Orwell. In Spanish. Non-technical
-  * Russell en 90 minutos. In Spanish. Non-technical
+  * Russell en 90 minutos, Strathern; non-technical. A quick introduction to Bertrand Russell, his life and his way of thinking and seeing the world.
+  * Homenaje a Cataluña, Orwell; non-technical. A first-person view of the events during the Spanish Civil War (1936-1939), seen from the perspective of a British citizen that went there voluntarily. Explains the internal fracture of the left political parties and the fracture of the Spanish society.
 
 <!--
 You can delete here and below
