Update books: start reading Team Geek

--- a/content/blog/2017-09-30-books-read-2017Q3.markdown
+++ b/content/blog/2017-09-30-books-read-2017Q3.markdown
@@ -122,6 +122,7 @@ wip (3):
 
   * Aprendo Yoga; Van Lysebeth; non-technical, own-it
   * Nature of Software Development, the; Jeffries; own-it
+  * Team Geek; Fitzpatrick, Collins-Sussman; own-it
 
 done:
 
