--- a/content/blog/2017-09-30-books-read-2017Q3.markdown
+++ b/content/blog/2017-09-30-books-read-2017Q3.markdown
@@ -20,6 +20,7 @@ Read this quarter:
 
   * the senior software developer; Copeland, with the [aprendices reading club][deaprendices]
   * Scandal in Bohemia, a; Doyle: a short novel by Sir Arthur Conan Doyle, mentioning Irene Adler and the king of Bohemia
+  * Getting things done, ...; Allen (+): A book on productivity, where Allen explains his method of GTD and how to apply it. Explains what has worked and not worked for him in his many years of consulting and coaching clients.
 
 Note: re+read means I'm re-reading this book. The (+) stands for one-or-more times, as in the regexes.
 
