[Books] Add 'Effective Java' as backlog

--- a/content/blog/2017-09-30-books-read-2017Q3.markdown
+++ b/content/blog/2017-09-30-books-read-2017Q3.markdown
@@ -109,6 +109,7 @@ backlog (partially sorted):
   * Thinking fast and slow
   * Emotional intelligence; Goleman
   * Ética a Nicómaco; Aristotle; own-it, non-technical
+  * Effective Java; Bloch; own-it
 
 unfinished (unsorted):
 
