[Books] add missing author

--- a/content/blog/2017-09-30-books-read-2017Q3.markdown
+++ b/content/blog/2017-09-30-books-read-2017Q3.markdown
@@ -108,7 +108,7 @@ backlog (partially sorted):
   * Finance for Freelancers; Retallick
   * Object-oriented software engineering: a use case driven approach; Jacobson
   * Patterns of Enterprise Application Architecture; Fowler; own-it
-  * Thinking fast and slow
+  * Thinking fast and slow; Kahneman
   * Emotional intelligence; Goleman
   * Ética a Nicómaco; Aristotle; own-it, non-technical
 
