--- a/content/blog/2017-06-30-books-read-2017Q2.markdown
+++ b/content/blog/2017-06-30-books-read-2017Q2.markdown
@@ -6,6 +6,8 @@ categories:
 - Q2
 - self-study
 - codurance
+- reading-club
+- aprendices
 comments: true
 date: 2017-06-30T21:00:00Z
 title: Books read in 2017Q2
