--- a/content/blog/2017-09-30-books-read-2017Q3.markdown
+++ b/content/blog/2017-09-30-books-read-2017Q3.markdown
@@ -6,6 +6,8 @@ categories:
 - Q3
 - self-study
 - codurance
+- aprendices
+- reading-club
 comments: true
 date: 2017-09-30T21:00:00Z
 published: false
