[books] start re-reading clean coder

--- a/content/blog/2017-09-30-books-read-2017Q3.markdown
+++ b/content/blog/2017-09-30-books-read-2017Q3.markdown
@@ -161,6 +161,7 @@ wip (3):
   * Working Effectively with Legacy Code (+); Feathers; own-it
   * Effective Java; Bloch; own-it
   * Nonviolent communication; Rosenberg; own-it, non-technical
+  * Clean coder; Martin
 
 done:
 
