--- a/content/blog/2017-09-30-books-read-2017Q3.markdown
+++ b/content/blog/2017-09-30-books-read-2017Q3.markdown
@@ -24,7 +24,9 @@ Read this quarter:
   * Getting things done, ...; Allen (+): A book on productivity, where Allen explains his method of GTD and how to apply it. Explains what has worked and not worked for him in his many years of consulting and coaching clients.
   * Nature of Software Development, the; Jeffries: Jefrries explains what he sees as 'the Natural way' of software development: agile-based, good technical practices-based, to produce software in an iterative incremental way, with a sustainable pace and not much technical debt.
   * Clean Coder: A Code of Conduct for Professional Programmers, the; Martin: a set of principles, values, and practices for the professional programmer (as compared to the 9-5 amateur programmer). 
-
+  * Team Geek; Fitzpatrick, Collins-Sussman; own-it
+  * Aprendo Yoga; Van Lysebeth; non-technical, own-it
+  * ML for the working programmer, 2nd edition [5th chapter only]; Paulson; own-it
 Note: re+read means I'm re-reading this book. The (+) stands for one-or-more times, as in the regexes.
 
 
