--- a/content/blog/2017-12-31-books-read-2017Q4.markdown
+++ b/content/blog/2017-12-31-books-read-2017Q4.markdown
@@ -33,11 +33,11 @@ Note: re+read means I'm re-reading this book. The (+) stands for one-or-more tim
   * Fist of god, the; Forsyth; own-it, non-technical: Synopsis: in a mixture of truth and novel, the author explains the invasion of Kuwait by Iraqi dictator Sadam Hussein. During that war, the development and destruction of some atomic bomb ('the fist of god'), the spy games played by the Americans and Brits to infiltrate the government at the highest levels.  Explains in laymen's terms how the Israeli Mossad ('the institute') works, how the katsa (case officers) work, the sayan(im) (dormant agents) work. How deception is used to extract information from third parties and how that information is sometimes passed, hidden, retransmitted and share among governments, agencies, armies and to the general public.  It is interesting to read this mixture of truth and reality, never knowing which is which but letting the imagination roam freely.
   * Avaro, el; Molière; own-it, non-technical
   * Bogleheads’ Guide to Investing, the; Larimore, Lindauer, LeBoeuf; own-it, non-technical, finance. Synopsis: this book explains, with plenty of supporting studies and investigation, why index investing is cheaper and more beneficial in the long term for the unsophisticated investor. The authors explain why being a passive investor (i.e., lazy portfolio) is more effective than active investing (i.e., actively managed portfolio), beating 80% of the money managers.  How, for the average investor, the act of investing resembles the game of horseshoes (similar to petanque) more than darts. How it is good enough to approximate the market rather than trying to beat the market.
-  * Lazyperson's guide to investment; Farrell; own-it, non-technical, finance
+  * Lazyperson's guide to investment; Farrell; own-it, non-technical, finance. Synopsis: this book explains in laymen's terms what lazy portfolios are and how, in average, beat the returns by actively-managed portfolios.  Details a few lazy portfolios, along with their respective past performances.
   * Millionaire next door, the; Stanley, Danko; own-it, non-technical, finance. Synopsis: a 1996 study of Accumulators of wealth (under, average, prodigious), detailing how American millionaires behave.  The main conclusion is that PAWs are frugal, have a budget and know exactly how much it is spent in each category and live well below their means.  There is plenty of categories where the authors explain how they behave. There is an important distinction between PAWs and affluent people. The latter acquire "signs of wealth" (e.g., expensive items) before being rich, the former do it after.  The formula for expected accumulation of wealth is `age * total yearly income / 10`.  example: age 45, income 25.000 -> expected wealth = `45 * 25000/10` = 112500
   * Little Book of Common Sense Investing; Bogle; own-it, non-technical, finance
   * Monje que vendió su Ferrari, el; Sharma; own-it, non-technical. Synopsis: explains the transformation of a successful lawyer, that goes to India to learn from the Sivana monks.  Seven techniques, each with a corresponding symbol to represent it, to improve the everyday life
-  * Siddhartha; Hesse; non-technical, own-it
+  * Siddhartha; Hesse; non-technical, own-it: Synopsis: explains the life of a contemporary of Buddha, altough the story is not really related to Gautama himself, but to the main character, Siddharta.  From a well-off family, abandons his possessions to join a group of ascetics and becomes a samana (or sramana - https://en.wikipedia.org/wiki/%C5%9Arama%E1%B9%87a). After that, both the Siddharta and Govinda (his friend) leave the ascetics, Govinda to join Gautama and Siddharta to go on his path. The latter goes and finds a ferryman (Vasudeva) along the way, with whom creates a friendship. Goes to the city, where he pursues riches (with a merchant, Kamaswami) and pleasure (with a courtesan, Kamala). Still thirsty with an unquenchable thirst, he abandons his current life. On the way back, he finds the ferryman, who teaches him to listen to the river. They live together for a long time until Siddhartha's son --a son he had with Kamala-- makes an appearance. The son tests Siddhartha's personality.
   * If you can: how millenials can get rich slowly; Bernstein; own-it, non-technical, finance
   
 
